--- a/client/client.html
+++ b/client/client.html
@@ -17,12 +17,14 @@
 <body>
     <div class="wrapper">
         <header>
+            <img class="background" src = "https://images.unsplash.com/photo-1520531158340-44015069e78e?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGJsYWNrJTIwYW5kJTIwd2hpdGUlMjBjaXR5fGVufDB8fDB8fHww">
             <h1><span class="small">my kinda</span> Bell Jar</h1>
             <p>Hey there, word nerds. I assume you're one of my friends if you landed here.<br>So, cybersecurity was getting a little... well, not exactly thrilling. So someone told me something about building a <i>WebSocket</i> to get a relief from my boredom.
                 <br>Here's the gist: WebSockets basically create a permanent connection between your browser and this server, so messages zip back and forth in real-time, it's like a constant back-and-forth, just like a good conversation should be.
                 <br>Fast forward-this little chat space. You know, the kind where you can ditch the mainstream and actually have a conversation without the noise. Primarily for my friends, especially the ones grounded from using social media or stuck with wayy more stricter parents than mine(eye roll).
                 Also there's a slight touch of Sylvia Plath inspiration(me and my naive headspace). You know, "The Bell Jar"? A place where we can riff on ideas, dissect the world (à la Virginia Woolf, of course!). Let's see where the conversation takes us.
             </p>
+            
         </header>
         <div class="blank"></div>
         <div class="secondwrap">
