--- a/client/client.html
+++ b/client/client.html
@@ -28,10 +28,13 @@
         <div class="overlay" id="myNav">
             <a href="javascript: void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
+                <table id="box">
+                    <tr>
+                        <td valign="top">
+                            <div id="notification"></div>
+                        </td>
+                    </tr>
+                </table>
             </div>  
         </div>
         <span id="menu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
