chore: WIP cloneNode impl

--- a/client/client.html
+++ b/client/client.html
@@ -49,7 +49,20 @@
                 <table id="container">
                     <tr>
                         <td valign="top">
-                            <div id="messages"></div>
+                            <div id="messages">
+                                <div id="box">
+                                    <div id="firstflex"></div>
+                                    <div class="BIG">
+                                        <div class="secondflex">
+                                            <div id="ID"></div>
+                                            <div id="WHEN"></div>
+                                        </div>
+                                        <div class="thirdflex">
+                                            <span id="MESS"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </td>
                     </tr>
                     <tr>
