--- a/client/client.html
+++ b/client/client.html
@@ -7,6 +7,7 @@
     <title>WebSocket | aj</title>
     
     <script defer src="client.js"> </script>
+    <script defer src="assets.js"> </script>
     <link href="client.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,17 +16,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
 </head>
 <body>
-    <script>
-        function openNav() {
-            document.getElementById("myNav").style.width = "100%";
-        }
-        function closeNav() {
-            document.getElementById("myNav").style.width = "0%";
-        }
-    </script>
     <div class="wrapper">
         <div class=" dashboard">
             <div class="overlay" id="myNav">
@@ -75,15 +69,6 @@
                                 <input type="text" id="input" placeholder="Type your message here">
                                 <div class="space"></div>
                                 <button id="send">Send</button>
-                                <script>
-                                    var input = document.getElementById("input");
-                                    input.addEventListener("keypress", function(event) {
-                                      if (event.key === "Enter") {
-                                        event.preventDefault();
-                                        document.getElementById("send").click();
-                                      }
-                                    });
-                                    </script>
                             </div> 
                         </td>
                     </tr>
